--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: 3.x
       - run: pip install -r doccer_requirements.txt
       - run: |
-          python ./doccer.py main.py docs mkdocs.yml
+          python main.py main.py docs mkdocs.yml
       - run: pip install mkdocs-material
       - run: pip install mkdocstrings
       - run: pip install pytkdocs[numpy-style]
